networkpolicy/policies/openshift-ansible-service-broker/asb-etcd-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: asb-etcd-ingress
spec:
  podSelector:
    matchLabels:
      app: etcd
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: openshift-ansible-service-broker
      ports:
        - port: 2379
          protocol: TCP
