networkpolicy/policies/openshift-ansible-service-broker/asb-service-broker-ingress.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: asb-service-broker-ingress
spec:
  podSelector:
    matchLabels:
      app: openshift-ansible-service-broker
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: service-catalog
    ports:
    - port: 1338
      protocol: TCP
